# atools

./: .gitignore  README.md  pyproject.toml
atools/analysis/: __init__.py  bond.py  electrocatalysis.py  molecule.py  space.py
atools/analysis/md/: diffusion.py  msd.py
atools/calcs/: xtb.py
atools/io/: __init__.py  trajectory.py
atools/io/orca/: __init__.py  parsers.py  reader.py
atools/plot/: energy_diagram.py
atools/tools/: cluster.py
